# School_management_system_using_Linkedlistconcept

./: CMakeLists.txt  README.md  faculty.c  faculty.h  fees.c  fileoperation.c  fileoperation.h  main1.c  section.c  student.c  student.h
build_copy/Desktop_Qt_6_8_0_llvm_mingw_64_bit-Debug/: CMakeCache.txt.prev  cmake_install.cmake
build_copy/Desktop_Qt_6_8_0_llvm_mingw_64_bit-Debug/.cmake/api/v1/reply/: codemodel-v2-c25557090f402935549f.json  index-2024-12-02T10-24-31-0075.json  target-school_management_system_linkedlist-Debug-b4bb684051546ca54898.json
build_copy/Desktop_Qt_6_8_0_llvm_mingw_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-b433a4bbaba3e7864836.json  cmakeFiles-v1-539d0684ca10aa5be211.json  codemodel-v2-76693981f2130fd008bd.json  target-school_management_system_linkedlist-Debug-82441bc8de3387ee2d29.json
